🐞 Fix heading spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,10 @@ h1, h2, h3, h4, p {
   margin-bottom: 1.5rem;
 }
 
+h1, h2, h3, h4 {
+  margin-top: 3rem;
+}
+
 .lead {
   font-size: 1.5rem;
   line-height: 1.25;
